package facebook;

import prueba7.Cuenta;

/**
 *
 * @author Daw1
 */
public class Main {

    /**
     * @param args the command line arguments
     */
    public static void main(String[] args) {
        Usuario juan67 = new Usuario("Juan67","juan67@gmail.com", 1111111111);
        
        Usuario pepe = new Usuario ("Pepe","pepe@gmail.com");
        
        Usuario eva= new Usuario();
        
//        Usuario clon1= juan67;
//        
//        System.out.println(juan67);
//        
//        System.out.println(clon1);
//        
//        Juan67.nick = "juan67";
//        Juan67.email = "juan67@gmail.com";
//        Juan67.telefono = 1111111111;
//        juan67.presentarse("Hola Facebook.");
//        juan67.verEstado("Bien.");
//        juan67.setNick("Pepe");

//        System.out.println("Nombre: " + juan67.nick + "\nEmail: " + juan67.email + "\nTelefono: " + juan67.telefono);
//        
//        System.out.println("Nombre: " + pepe.nick + "\nEmail: " + pepe.email + "\nTelefono: " + pepe.telefono);
//        
//        System.out.println("Nombre: " + eva.nick + "\nEmail: " + eva.email + "\nTelefono: " + eva.telefono);

//        juan67.mostrar();
//        
//        juan67.setTelefono(222222222);
//        
//        juan67.mostrar();

        Cuenta usuario= new Cuenta("12345678A", "Alejandro");
        

//         System.out.println(usuario);

    }//end main

    
}//end class